# ResearchAgent

./: .gitignore  ingestion.py  main.py  pyproject.toml
Backend/: core.py
