[project]
name = "researchagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-openrouter>=0.2.6",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langsmith>=0.10.5",
    "python-dotenv>=1.2.2",
]
